--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,24 @@
-<h1>Welcome to My App</h1>
-<% if @current_user %>
-  <p>You are logged in as <%= @current_user.username %>.</p>
-  <%= button_to 'Logout', logout_path, method: :delete %>
-<% else %>
-  <p>You are not logged in.</p>
-  <%= link_to 'Login', login_path %> |
-<% end %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Transaction Web</title>
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome to My App</h1>
+    <% if @current_user %>
+      <p>You are logged in as <%= @current_user.username %>.</p>
+    <% else %>
+      <p>You are not logged in.</p>
+    <% end %>
+    <h1>Stock Exchange Web</h1>
+    <p>Here are some of the features of this web:</p>
+    <ul>
+      <li>You can create and track transactions.</li>
+      <li>You can view reports on your transactions.</li>
+      <li>You can collaborate with others on transactions.</li>
+    </ul>
+  </div>
+</body>
+</html>
+
