--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,11 +13,11 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to "My Wallet", home_path, class: "nav-link" %>
+          <%= link_to "My Wallet", wallets_path, class: "nav-link" if @current_user %>
         </li>
 
         <li class="nav-item">
-          <%= link_to "Stock", home_path, class: "nav-link" %>
+          <%= link_to "Stock", home_path, class: "nav-link" if @current_user %>
         </li>
 
         <% log_class = (["/login", "/logout"].include? request.fullpath.to_s) ? "nav-link active" : "nav-link" %>
