--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,12 +11,13 @@
     <% else %>
       <p>You are not logged in.</p>
     <% end %>
-    <h1>Stock Exchange Web</h1>
+    <h1>Wallet Solution Web</h1>
     <p>Here are some of the features of this web:</p>
     <ul>
-      <li>You can create and track transactions.</li>
-      <li>You can view reports on your transactions.</li>
+      <li>You can create transactions.</li>
+      <li>You can view your transaction history.</li>
       <li>You can collaborate with others on transactions.</li>
+      <li>You can buy and sell stocks.</li>
     </ul>
   </div>
 </body>
