--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -6,6 +6,14 @@
 </head>
 <body>
   <div class="container">
+    <% if flash.alert %>
+      <div class="flash-alert"> <%= flash.alert %> </div>
+    <% end %>
+
+    <% if flash.notice %>
+      <div class="flash-success"> <%= flash.notice %> </div>
+    <% end %>
+
     <h1>My Wallet</h1>
     <div class="row">
       <div class="col-md-12">
