--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,13 +5,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to My App</h1>
+    <%= render 'shared/flash' %>
+    <h1>Wallet Solution App</h1>
     <% if @current_user %>
       <p>You are logged in as <%= @current_user.username %>.</p>
     <% else %>
       <p>You are not logged in.</p>
     <% end %>
-    <h1>Wallet Solution Web</h1>
     <p>Here are some of the features of this web:</p>
     <ul>
       <li>You can create transactions.</li>
