--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -9,10 +9,18 @@
   <div class="row">
     <div class="col-md-1"> </div>
     <div class="col-md-11">
+
+      <div class="form-group row">
+        <%= f.label :source_wallet, class: "col-md-1 col-form-label" %>
+        <div class="col-md-6">
+          <%= f.collection_select :source_wallet, @my_wallets, :id, :wallet_owner, { include_blank: 'Select your wallet' }, class: "form-control" %>
+        </div>
+      </div>
+
       <div class="form-group row">
         <%= f.label :target_wallet, class: "col-md-1 col-form-label" %>
         <div class="col-md-6">
-          <%= f.collection_select :target_wallet, @wallets, :id, :wallet_owner, { include_blank: 'Select your recipient' }, class: "form-control" %>
+          <%= f.collection_select :target_wallet, @target_wallets, :id, :wallet_owner, { include_blank: 'Select your recipient' }, class: "form-control" %>
         </div>
       </div>
       <div class="form-group row">
