--- a/app/views/shared/_wallet.html.erb
+++ b/app/views/shared/_wallet.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
   <%= render 'shared/flash' %>
 
-  <h1>Wallet</h1>
+  <h2>Balance</h1>
   <div class="row">
     <div class="col-md-12">
-      <h2>Balance</h2>
-      <p>Your current balance is <%= @wallet.current_balance %> </p>
+      <h5><%= @wallet.current_balance %> </h5>
     </div>
     <div class="col-md-12">
       <h2>Transaction History</h2>
