--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-1"> </div>
-  <div class="col-md-11">
+  <div class="col-md-7">
+    <%= render 'shared/flash' %>
     <h1>New Transaction</h1>
   </div>
 </div>
